@@ -1,5 +1,10 @@
 2004-05-16  Benjamin Otte  <otte@gnome.org>
 
+	* ext/alsa/gstalsa.c: (gst_alsa_caps), (gst_alsa_get_caps):
+	  simplify caps
+
+2004-05-16  Benjamin Otte  <otte@gnome.org>
+
 	* gst/asfdemux/gstasfdemux.c: (gst_asf_demux_process_comment):
 	  don't write to memory we might not write to - g_convert does that
 	  for us anyway (fixes #142613)
